force-app/main/default/objects/Lease_Assignment__c/fields/White_Glove_Comments__c.field-meta.xml
<CustomField>
    <fullName>White_Glove_Comments__c</fullName>
    <description>Populated from divest site</description>
    <inlineHelpText>Populated from divest site</inlineHelpText>
    <label>White Glove Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>