force-app/main/default/objects/Lease_Assignment__c/fields/White_Glove_Designation__c.field-meta.xml
<CustomField>
    <fullName>White_Glove_Designation__c</fullName>
    <formula>Divestiture_Site__r.White_Glove__c</formula>
    <inlineHelpText>Populated from Divest Site record and flows through all divest objects for national team</inlineHelpText>
    <label>White Glove Designation</label>
    <type>Checkbox</type>
</CustomField>