force-app/main/default/objects/Lease_Assignment__c/fields/Who_is_paying_for_the_fees__c.field-meta.xml
<CustomField>
    <fullName>Who_is_paying_for_the_fees__c</fullName>
    <label>Who is paying for the fees?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dish</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>