force-app/main/default/objects/Lease_Assignment__c/fields/Why_Fees_are_required__c.field-meta.xml
<CustomField>
    <fullName>Why_Fees_are_required__c</fullName>
    <label>Why Fees are required?</label>
    <type>TextArea</type>
</CustomField>