force-app/main/default/objects/Lease_Assignment__c/validationRules/MandateLegalFees.validationRule-meta.xml
<ValidationRule>
    <fullName>MandateLegalFees</fullName>
    <active>true</active>
    <description>To Mandate the value in the currency field - Legal Fees, based on the selection in the Multi-select picklist field - LL Demands Additional Compensation</description>
    <errorConditionFormula>AND(
INCLUDES(LL_Demands_Additional_Compensation__c, &apos;Legal Fees&apos;),
ISNULL(Legal_Fees__c)
)</errorConditionFormula>
    <errorDisplayField>Legal_Fees__c</errorDisplayField>
    <errorMessage>LL Demands Additional Compensation has Legal Fees
Please Enter value in the field - Legal Fees</errorMessage>
</ValidationRule>