force-app/main/default/objects/Lease_Assignment__c/validationRules/MandateReasonforOtherFees.validationRule-meta.xml
<ValidationRule>
    <fullName>MandateReasonforOtherFees</fullName>
    <active>true</active>
    <description>To Mandate the value in the Text field - Other Fees Description, based on the selection in the Multi-select picklist field - LL Demands Additional Compensation</description>
    <errorConditionFormula>AND(
INCLUDES(LL_Demands_Additional_Compensation__c, &apos;Other Fees&apos;),
ISBLANK(Other_Fees_Description__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Fees_Description__c</errorDisplayField>
    <errorMessage>LL Demands Additional Compensation has Other Fees
Please Enter value in the field - Other Fields Description</errorMessage>
</ValidationRule>