force-app/main/default/objects/Lease_Assignment__c/validationRules/NoFeepaidbyDish.validationRule-meta.xml
<ValidationRule>
    <fullName>NoFeepaidbyDish</fullName>
    <active>true</active>
    <description>If there an agreement to pay fees is No.
Blank the value from Fee paid by Dish</description>
    <errorConditionFormula>AND(
ISPICKVAL(Is_there_an_agreement_to_pay_fees__c, &apos;No&apos;),
NOT(ISNULL(Fee_paid_by_Dish__c))
)</errorConditionFormula>
    <errorDisplayField>Fee_paid_by_Dish__c</errorDisplayField>
    <errorMessage>Is there an agreement to pay fees is No.
Please remove the value from Fee paid by Dish</errorMessage>
</ValidationRule>