force-app/main/default/objects/Lease_Assignment__c/validationRules/NoFeepaidbyTMobile.validationRule-meta.xml
<ValidationRule>
    <fullName>NoFeepaidbyTMobile</fullName>
    <active>true</active>
    <description>If there an agreement to pay fees is No.
Blank the value from Fee paid by T-Mobile</description>
    <errorConditionFormula>AND(
ISPICKVAL(Is_there_an_agreement_to_pay_fees__c, &apos;No&apos;),
NOT(ISNULL(Fee_paid_by_T_Mobile__c))
)</errorConditionFormula>
    <errorDisplayField>Fee_paid_by_T_Mobile__c</errorDisplayField>
    <errorMessage>Is there an agreement to pay fees is No.
Please remove the value from Fee paid by T-Mobile</errorMessage>
</ValidationRule>