force-app/main/default/objects/Lease_Assignment__c/validationRules/NoMandateDishproceedingwiththeirownlease.validationRule-meta.xml
<ValidationRule>
    <fullName>NoMandateDishproceedingwiththeirownlease</fullName>
    <active>true</active>
    <description>If Does Dish still want to option lease is No.
Dish proceeding with their own lease shd b selected Yes or No.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Does_Dish_still_want_to_option_lease__c,&apos;No&apos;),
ISBLANK(TEXT(Dish_proceeding_with_their_own_lease__c)))</errorConditionFormula>
    <errorDisplayField>Dish_proceeding_with_their_own_lease__c</errorDisplayField>
    <errorMessage>Please select Yes or No.
Since, Does Dish still want to option lease is No.</errorMessage>
</ValidationRule>