force-app/main/default/objects/Lease_Assignment__c/validationRules/NoWhichfeeshasTMOagreedtopay.validationRule-meta.xml
<ValidationRule>
    <fullName>NoWhichfeeshasTMOagreedtopay</fullName>
    <active>true</active>
    <description>If there an agreement to pay fees is No.
Blank the value from Which fees has TMO agreed to pay</description>
    <errorConditionFormula>AND(
ISPICKVAL(Is_there_an_agreement_to_pay_fees__c, &apos;No&apos;),
NOT(ISBLANK( Which_fees_has_TMO_agreed_to_pay__c))
)</errorConditionFormula>
    <errorDisplayField>Which_fees_has_TMO_agreed_to_pay__c</errorDisplayField>
    <errorMessage>Is there an agreement to pay fees is No.
Please remove the value from Which fees has TMO agreed to pay</errorMessage>
</ValidationRule>